--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,17 @@
   --background: #ffffff;
   --foreground: #171717;
 }
+@keyframes moveArrow {
+  0% {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(10px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
 
 @media (prefers-color-scheme: dark) {
   :root {
