--- a/app/globals.css
+++ b/app/globals.css
@@ -24,6 +24,16 @@
     --foreground: #ededed;
   }
 }
+@layer utilities {
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+}
 
 body {
   color: var(--foreground);
